--- a/UCDPA_JohnLenehan.ipynb
+++ b/UCDPA_JohnLenehan.ipynb
@@ -7,9 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Open source dataset - New York Citywide Payroll Data (JSON: https://data.cityofnewyork.us/resource/k397-673e.json)\n",
-    "#Keep all data stored in single location for upload\n",
-    "#"
+    "#Open source dataset - evictions in New York from 2017 to present \n",
+    "#Source: https://data.cityofnewyork.us/City-Government/Evictions/6z8x-wfk4\n",
+    "#(JSON: https://data.cityofnewyork.us/resource/6z8x-wfk4.json?$limit=100000)"
    ]
   },
   {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b8eb4453",
+   "id": "d9f14add",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "88316f6b",
+   "id": "31c4f6b0",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "405f4925",
+   "id": "fdd4c7f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "821df475",
+   "id": "e27bdddc",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0cc9b5f4",
+   "id": "f2cd8a9b",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "03107b46",
+   "id": "887a9b6f",
    "metadata": {
     "scrolled": true
    },
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "6d1fed16",
+   "id": "0f1f8dd2",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "255aac72",
+   "id": "d0b0737f",
    "metadata": {},
    "outputs": [
     {
