Splitting out geography data

--- a/UCDPA_JohnLenehan.ipynb
+++ b/UCDPA_JohnLenehan.ipynb
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "26ebdb86",
+   "id": "247cccf9",
    "metadata": {},
    "outputs": [
     {
@@ -141,8 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "fdbda586",
+   "execution_count": 64,
+   "id": "75eadc18",
    "metadata": {},
    "outputs": [
     {
@@ -163,12 +163,12 @@
       "3                        7684.0  Census Tract 23, Bronx County, NY   \n",
       "4                        8483.0  Census Tract 25, Bronx County, NY   \n",
       "\n",
-      "         ID Geography  \n",
-      "0  14000US36005000200  \n",
-      "1  14000US36005000400  \n",
-      "2  14000US36005001600  \n",
-      "3  14000US36005002300  \n",
-      "4  14000US36005002500  \n",
+      "         ID Geography     Census Tract         County State  \n",
+      "0  14000US36005000200   Census Tract 2   Bronx County    NY  \n",
+      "1  14000US36005000400   Census Tract 4   Bronx County    NY  \n",
+      "2  14000US36005001600  Census Tract 16   Bronx County    NY  \n",
+      "3  14000US36005002300  Census Tract 23   Bronx County    NY  \n",
+      "4  14000US36005002500  Census Tract 25   Bronx County    NY  \n",
       "       ID Year  Year  ID Race   Race  Household Income by Race  \\\n",
       "16688     2013  2013        0  Total                     65313   \n",
       "16689     2013  2013        0  Total                     76058   \n",
@@ -183,18 +183,15 @@
       "16691                        9502.0  Census Tract 319.02, Richmond County, NY   \n",
       "16692                       14271.0     Census Tract 323, Richmond County, NY   \n",
       "\n",
-      "             ID Geography  \n",
-      "16688  14000US36085030301  \n",
-      "16689  14000US36085030302  \n",
-      "16690  14000US36085031901  \n",
-      "16691  14000US36085031902  \n",
-      "16692  14000US36085032300  \n",
+      "             ID Geography         Census Tract            County State  \n",
+      "16688  14000US36085030301  Census Tract 303.01   Richmond County    NY  \n",
+      "16689  14000US36085030302  Census Tract 303.02   Richmond County    NY  \n",
+      "16690  14000US36085031901  Census Tract 319.01   Richmond County    NY  \n",
+      "16691  14000US36085031902  Census Tract 319.02   Richmond County    NY  \n",
+      "16692  14000US36085032300     Census Tract 323   Richmond County    NY  \n",
       "['Total']\n",
-      "['Census Tract 2, Bronx County, NY' 'Census Tract 4, Bronx County, NY'\n",
-      " 'Census Tract 16, Bronx County, NY' ...\n",
-      " 'Census Tract 110, Bronx County, NY'\n",
-      " 'Census Tract 641.02, Queens County, NY'\n",
-      " 'Census Tract 228, Richmond County, NY']\n"
+      "[' Bronx County' ' Kings County' ' New York County' ' Queens County'\n",
+      " ' Richmond County']\n"
      ]
     }
    ],
@@ -203,7 +200,7 @@
     "print(NY_Income_gross.tail())\n",
     "\n",
     "print(NY_Income_gross.Race.unique())\n",
-    "print(NY_Income_gross.Geography.unique())"
+    "print(NY_Income_gross.County.unique())"
    ]
   },
   {
