--- a/UCDPA_JohnLenehan.ipynb
+++ b/UCDPA_JohnLenehan.ipynb
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "40ad5fba",
+   "id": "c126bff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,9 +668,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "98b7119b",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -767,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "id": "ecb75fe2",
    "metadata": {},
    "outputs": [
@@ -781,55 +779,54 @@
       "2   BRONX  2020             34766                6118.0\n",
       "3   BRONX  2020             24474                7684.0\n",
       "4   BRONX  2020             27196                8483.0\n",
-      "                    Household Income  Household Income MOE\n",
-      "Year Borough                                              \n",
-      "2020 BRONX                  47602.21              13496.98\n",
-      "     BROOKLYN               70885.27              18509.92\n",
-      "     MANHATTAN             102472.50              26732.09\n",
-      "     QUEENS                 77254.35              18586.95\n",
-      "     STATEN ISLAND          85251.05              21719.59\n",
-      "2019 BRONX                  45628.97              10545.49\n",
-      "     BROOKLYN               67743.39              14953.65\n",
-      "     MANHATTAN              99467.44              21443.96\n",
-      "     QUEENS                 73779.56              14984.65\n",
-      "     STATEN ISLAND          82968.25              17775.42\n",
-      "2018 BRONX                  43354.89               9934.15\n",
-      "     BROOKLYN               63340.91              13751.50\n",
-      "     MANHATTAN              94790.56              20508.93\n",
-      "     QUEENS                 70348.20              14291.14\n",
-      "     STATEN ISLAND          78057.55              16994.09\n",
-      "2017 BRONX                  41688.32               9209.21\n",
-      "     BROOKLYN               59774.86              12981.86\n",
-      "     MANHATTAN              91715.70              19810.96\n",
-      "     QUEENS                 66931.36              13756.62\n",
-      "     STATEN ISLAND          75298.24              14432.01\n",
-      "2016 BRONX                  40375.79               8773.16\n",
-      "     BROOKLYN               56790.46              12290.36\n",
-      "     MANHATTAN              86799.51              19310.58\n",
-      "     QUEENS                 64146.02              13204.83\n",
-      "     STATEN ISLAND          73412.28              14549.54\n",
-      "2015 BRONX                  39311.20               8547.60\n",
-      "     BROOKLYN               54264.91              11949.44\n",
-      "     MANHATTAN              84555.19              18248.35\n",
-      "     QUEENS                 62336.88              13189.87\n",
-      "     STATEN ISLAND          72021.23              13995.67\n",
-      "2014 BRONX                  39249.36              10488.69\n",
-      "     BROOKLYN               53130.10              12067.54\n",
-      "     MANHATTAN              82404.63              19210.25\n",
-      "     QUEENS                 61879.28              13986.73\n",
-      "     STATEN ISLAND          74558.15              14167.82\n",
-      "2013 BRONX                  39525.86              10160.88\n",
-      "     BROOKLYN               52152.55              12350.03\n",
-      "     MANHATTAN              79878.71              18840.48\n",
-      "     QUEENS                 61378.72              14376.66\n",
-      "     STATEN ISLAND          72802.25              13725.81\n"
+      "    Year        Borough  Household Income  Household Income MOE\n",
+      "0   2020          BRONX          47602.21              13496.98\n",
+      "1   2020       BROOKLYN          70885.27              18509.92\n",
+      "2   2020      MANHATTAN         102472.50              26732.09\n",
+      "3   2020         QUEENS          77254.35              18586.95\n",
+      "4   2020  STATEN ISLAND          85251.05              21719.59\n",
+      "5   2019          BRONX          45628.97              10545.49\n",
+      "6   2019       BROOKLYN          67743.39              14953.65\n",
+      "7   2019      MANHATTAN          99467.44              21443.96\n",
+      "8   2019         QUEENS          73779.56              14984.65\n",
+      "9   2019  STATEN ISLAND          82968.25              17775.42\n",
+      "10  2018          BRONX          43354.89               9934.15\n",
+      "11  2018       BROOKLYN          63340.91              13751.50\n",
+      "12  2018      MANHATTAN          94790.56              20508.93\n",
+      "13  2018         QUEENS          70348.20              14291.14\n",
+      "14  2018  STATEN ISLAND          78057.55              16994.09\n",
+      "15  2017          BRONX          41688.32               9209.21\n",
+      "16  2017       BROOKLYN          59774.86              12981.86\n",
+      "17  2017      MANHATTAN          91715.70              19810.96\n",
+      "18  2017         QUEENS          66931.36              13756.62\n",
+      "19  2017  STATEN ISLAND          75298.24              14432.01\n",
+      "20  2016          BRONX          40375.79               8773.16\n",
+      "21  2016       BROOKLYN          56790.46              12290.36\n",
+      "22  2016      MANHATTAN          86799.51              19310.58\n",
+      "23  2016         QUEENS          64146.02              13204.83\n",
+      "24  2016  STATEN ISLAND          73412.28              14549.54\n",
+      "25  2015          BRONX          39311.20               8547.60\n",
+      "26  2015       BROOKLYN          54264.91              11949.44\n",
+      "27  2015      MANHATTAN          84555.19              18248.35\n",
+      "28  2015         QUEENS          62336.88              13189.87\n",
+      "29  2015  STATEN ISLAND          72021.23              13995.67\n",
+      "30  2014          BRONX          39249.36              10488.69\n",
+      "31  2014       BROOKLYN          53130.10              12067.54\n",
+      "32  2014      MANHATTAN          82404.63              19210.25\n",
+      "33  2014         QUEENS          61879.28              13986.73\n",
+      "34  2014  STATEN ISLAND          74558.15              14167.82\n",
+      "35  2013          BRONX          39525.86              10160.88\n",
+      "36  2013       BROOKLYN          52152.55              12350.03\n",
+      "37  2013      MANHATTAN          79878.71              18840.48\n",
+      "38  2013         QUEENS          61378.72              14376.66\n",
+      "39  2013  STATEN ISLAND          72802.25              13725.81\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jlenehan\\AppData\\Local\\Temp\\ipykernel_17800\\3301027390.py:30: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "C:\\Users\\jlenehan\\AppData\\Local\\Temp\\ipykernel_17800\\1200676744.py:30: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  NY_Income = NY_Income_gross.groupby(['Year','Borough'], sort = [True,True])['Household Income','Household Income MOE'].mean()\n"
      ]
     }
@@ -867,8 +864,8 @@
     "NY_Income = NY_Income_gross.groupby(['Year','Borough'], sort = [True,True])['Household Income','Household Income MOE'].mean()\n",
     "\n",
     "NY_Income = NY_Income.round(decimals=2)\n",
-    "NY_Income=NY_Income.sort_values(['Year','Borough'],ascending=[False,True])\n",
-    "#NY_Income=NY_Income['Year'==2020]\n",
+    "NY_Income = NY_Income.sort_values(['Year','Borough'],ascending=[False,True])\n",
+    "NY_Income = NY_Income.reset_index()\n",
     "\n",
     "#print final dataset\n",
     "print(NY_Income)\n"
@@ -932,11 +929,180 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "303aac0b",
+   "id": "187030fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Joining datasets"
+    "##########################################\n",
+    "#Step 4: Joining data\n",
+    "##########################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "07b26457",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Year        Borough  Household Income  Household Income MOE  population\n",
+      "0   2020          BRONX          47602.21              13496.98     1472654\n",
+      "1   2020       BROOKLYN          70885.27              18509.92     2736074\n",
+      "2   2020      MANHATTAN         102472.50              26732.09     1694251\n",
+      "3   2020         QUEENS          77254.35              18586.95     2405464\n",
+      "4   2020  STATEN ISLAND          85251.05              21719.59      495747\n",
+      "5   2019          BRONX          45628.97              10545.49     1472654\n",
+      "6   2019       BROOKLYN          67743.39              14953.65     2736074\n",
+      "7   2019      MANHATTAN          99467.44              21443.96     1694251\n",
+      "8   2019         QUEENS          73779.56              14984.65     2405464\n",
+      "9   2019  STATEN ISLAND          82968.25              17775.42      495747\n",
+      "10  2018          BRONX          43354.89               9934.15     1472654\n",
+      "11  2018       BROOKLYN          63340.91              13751.50     2736074\n",
+      "12  2018      MANHATTAN          94790.56              20508.93     1694251\n",
+      "13  2018         QUEENS          70348.20              14291.14     2405464\n",
+      "14  2018  STATEN ISLAND          78057.55              16994.09      495747\n",
+      "15  2017          BRONX          41688.32               9209.21     1472654\n",
+      "16  2017       BROOKLYN          59774.86              12981.86     2736074\n",
+      "17  2017      MANHATTAN          91715.70              19810.96     1694251\n",
+      "18  2017         QUEENS          66931.36              13756.62     2405464\n",
+      "19  2017  STATEN ISLAND          75298.24              14432.01      495747\n",
+      "20  2016          BRONX          40375.79               8773.16     1472654\n",
+      "21  2016       BROOKLYN          56790.46              12290.36     2736074\n",
+      "22  2016      MANHATTAN          86799.51              19310.58     1694251\n",
+      "23  2016         QUEENS          64146.02              13204.83     2405464\n",
+      "24  2016  STATEN ISLAND          73412.28              14549.54      495747\n",
+      "25  2015          BRONX          39311.20               8547.60     1472654\n",
+      "26  2015       BROOKLYN          54264.91              11949.44     2736074\n",
+      "27  2015      MANHATTAN          84555.19              18248.35     1694251\n",
+      "28  2015         QUEENS          62336.88              13189.87     2405464\n",
+      "29  2015  STATEN ISLAND          72021.23              13995.67      495747\n",
+      "30  2014          BRONX          39249.36              10488.69     1472654\n",
+      "31  2014       BROOKLYN          53130.10              12067.54     2736074\n",
+      "32  2014      MANHATTAN          82404.63              19210.25     1694251\n",
+      "33  2014         QUEENS          61879.28              13986.73     2405464\n",
+      "34  2014  STATEN ISLAND          74558.15              14167.82      495747\n",
+      "35  2013          BRONX          39525.86              10160.88     1472654\n",
+      "36  2013       BROOKLYN          52152.55              12350.03     2736074\n",
+      "37  2013      MANHATTAN          79878.71              18840.48     1694251\n",
+      "38  2013         QUEENS          61378.72              14376.66     2405464\n",
+      "39  2013  STATEN ISLAND          72802.25              13725.81      495747\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Joining income data to population data - left join\n",
+    "##2020 census populations will be taken as the \n",
+    "\n",
+    "NY_Income_Pop = NY_Income.merge(NY_Pop['population'], how = 'left',\n",
+    "                                    left_on = 'Borough', right_on = 'borough')\n",
+    "\n",
+    "print(NY_Income_Pop)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "216d7cab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      executed_date  year          marshal residential_commercial_ind  \\\n",
+      "0        2019-02-22  2019   Danny Weinheim                Residential   \n",
+      "1        2019-07-17  2019       Thomas Bia                Residential   \n",
+      "2        2017-10-23  2017  Justin Grossman                 Commercial   \n",
+      "4        2019-04-05  2019       Thomas Bia                Residential   \n",
+      "5        2017-10-04  2017       Bruce Kemp                 Commercial   \n",
+      "...             ...   ...              ...                        ...   \n",
+      "70252    2020-02-26  2020       Thomas Bia                Residential   \n",
+      "70253    2017-04-12  2017     Edward Guida                Residential   \n",
+      "70254    2017-04-11  2017   Danny Weinheim                Residential   \n",
+      "70255    2019-10-03  2019  Alfred Locascio                Residential   \n",
+      "70256    2019-03-20  2019  Justin Grossman                Residential   \n",
+      "\n",
+      "         borough  eviction_zip         ejectment eviction_possession  \\\n",
+      "0          BRONX         10453  Not an Ejectment          Possession   \n",
+      "1      MANHATTAN         10019  Not an Ejectment          Possession   \n",
+      "2       BROOKLYN         11208  Not an Ejectment          Possession   \n",
+      "4          BRONX         10458  Not an Ejectment          Possession   \n",
+      "5         QUEENS         11373  Not an Ejectment          Possession   \n",
+      "...          ...           ...               ...                 ...   \n",
+      "70252      BRONX         10462  Not an Ejectment          Possession   \n",
+      "70253  MANHATTAN         10040  Not an Ejectment          Possession   \n",
+      "70254      BRONX         10469  Not an Ejectment          Possession   \n",
+      "70255      BRONX         10475  Not an Ejectment          Possession   \n",
+      "70256   BROOKLYN         11238  Not an Ejectment          Possession   \n",
+      "\n",
+      "        latitude  longitude  community_board  council_district  census_tract  \\\n",
+      "0      40.852901 -73.906957              5.0              14.0         241.0   \n",
+      "1      40.762365 -73.988254              4.0               3.0         127.0   \n",
+      "2      40.673269 -73.874867              5.0              42.0        1194.0   \n",
+      "4      40.865947 -73.889009              7.0              15.0       40502.0   \n",
+      "5      40.744183 -73.870562              4.0              25.0         463.0   \n",
+      "...          ...        ...              ...               ...           ...   \n",
+      "70252  40.831773 -73.852215              9.0              18.0          92.0   \n",
+      "70253  40.853235 -73.929039             12.0              10.0         277.0   \n",
+      "70254  40.870098 -73.861407             12.0              12.0         342.0   \n",
+      "70255  40.873961 -73.825985             10.0              12.0       46201.0   \n",
+      "70256  40.683901 -73.956214              3.0              36.0         229.0   \n",
+      "\n",
+      "             bin           bbl                         nta  Household Income  \\\n",
+      "0      2007947.0  2.028290e+09                  Mount Hope          45628.97   \n",
+      "1      1025159.0  1.010390e+09                     Clinton          99467.44   \n",
+      "2      3095328.0  3.042460e+09               East New York          59774.86   \n",
+      "4      2016647.0  2.032880e+09  Bedford Park-Fordham North          45628.97   \n",
+      "5      4039978.0  4.016010e+09                    Elmhurst          66931.36   \n",
+      "...          ...           ...                         ...               ...   \n",
+      "70252  2026535.0  2.038120e+09       Westchester-Unionport          47602.21   \n",
+      "70253  1063852.0  1.021590e+09    Washington Heights North          91715.70   \n",
+      "70254  2055756.0  2.045740e+09     Allerton-Pelham Gardens          41688.32   \n",
+      "70255  2096753.0  2.051410e+09                  Co-op City          45628.97   \n",
+      "70256  3057197.0  3.019900e+09                Clinton Hill          67743.39   \n",
+      "\n",
+      "       Household Income MOE  population  \n",
+      "0                  10545.49   1472654.0  \n",
+      "1                  21443.96   1694251.0  \n",
+      "2                  12981.86   2736074.0  \n",
+      "4                  10545.49   1472654.0  \n",
+      "5                  13756.62   2405464.0  \n",
+      "...                     ...         ...  \n",
+      "70252              13496.98   1472654.0  \n",
+      "70253              19810.96   1694251.0  \n",
+      "70254               9209.21   1472654.0  \n",
+      "70255              10545.49   1472654.0  \n",
+      "70256              14953.65   2736074.0  \n",
+      "\n",
+      "[60062 rows x 19 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Joining datasets (NY_Merged dataframe)\n",
+    "\n",
+    "##Joining eviction data to income-population data - left join\n",
+    "##2020 census populations will be taken as the \n",
+    "\n",
+    "NY_Merged = NY_Evictions.merge(NY_Income_Pop, how = 'left',\n",
+    "                               left_on = ['year','borough'], \n",
+    "                               right_on = ['Year','Borough'])\n",
+    "\n",
+    "\n",
+    "#cleaning up redundant columns\n",
+    "NY_Merged = NY_Merged[['executed_date', 'year', 'marshal', 'residential_commercial_ind',\n",
+    "       'borough', 'eviction_zip', 'ejectment', 'eviction_possession',\n",
+    "       'latitude', 'longitude', 'community_board', 'council_district',\n",
+    "       'census_tract', 'bin', 'bbl', 'nta','Household Income', 'Household Income MOE', \n",
+    "                       'population']]\n",
+    "\n",
+    "#dropping missing values\n",
+    "NY_Merged.dropna(inplace=True)\n",
+    "\n",
+    "print(NY_Merged)\n"
    ]
   },
   {
@@ -957,9 +1123,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "f43f6d5f",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
